terminado los errores de las paginas de categorias

--- a/peliculas2.html
+++ b/peliculas2.html
@@ -69,82 +69,88 @@
         </div>
 
         <!-- primera fila -->
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/enemigo-publico.webp" alt="">
-                    <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">Enemigo Publico</h2>
-                        <p class="card_info">Un abogado se convierte en el objetivo de un político corrupto y de sus
-                            matones de la Agencia de Seguridad tras recibir por accidente las pruebas un crimen
-                            político.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/enemigo-publico.webp" alt="">
+                        <div class="card_body  dark  d-flex flex-column">
+                            <h2 class="card_title">Enemigo Publico</h2>
+                            <p class="card_info">Un abogado se convierte en el objetivo de un político corrupto y de sus
+                                matones de la Agencia de Seguridad tras recibir por accidente las pruebas un crimen
+                                político.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/proyecto-geminis.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Proyecto geminis</h2>
+                            <p class="card_info">Henry Bogan, un asesino a sueldo, pretende retirarse porque se siente
+                                viejo. Sin embargo, hay alguien que no está dispuesto a permitírselo porque tiene la
+                                misión
+                                de matarlo: un clon suyo más joven, más rápido y más fuerte.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/proyecto-geminis.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Proyecto geminis</h2>
-                        <p class="card_info">Henry Bogan, un asesino a sueldo, pretende retirarse porque se siente
-                            viejo. Sin embargo, hay alguien que no está dispuesto a permitírselo porque tiene la misión
-                            de matarlo: un clon suyo más joven, más rápido y más fuerte.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/john-carter.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">John Carter</h2>
-                        <p class="card_info">John Carter, un veterano de la Guerra Civil norteamericana, es trasladado
-                            misteriosamente a Marte. Allí deberá tomar parte en el conflicto de sus pobladores al
-                            descubrir que la supervivencia de sus habitantes está en sus manos.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/john-carter.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">John Carter</h2>
+                            <p class="card_info">John Carter, un veterano de la Guerra Civil norteamericana, es
+                                trasladado
+                                misteriosamente a Marte. Allí deberá tomar parte en el conflicto de sus pobladores al
+                                descubrir que la supervivencia de sus habitantes está en sus manos.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/los-4-fantastico.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Los 4 Fantasticos</h2>
+                            <p class="card_info">Durante un viaje espacial, cuatro astronautas se exponen a una extraña
+                                tormenta que altera su ADN y les dota de asombrosos superpoderes.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/los-4-fantastico.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Los 4 Fantasticos</h2>
-                        <p class="card_info">Durante un viaje espacial, cuatro astronautas se exponen a una extraña
-                            tormenta que altera su ADN y les dota de asombrosos superpoderes.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/rapidos-furiosos-2.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Rapido y Furioso 2</h2>
-                        <p class="card_info">El expolicía Brian O'Conner y su amigo Roman Pearce vuelven al mundo de las
-                            carreras para transportar dinero sucio del criminal Carter Verone en Miami, mientras
-                            colaboran con la agente encubierta Mónica Clemente para derribar su imperio. </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/rapidos-furiosos-2.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Rapido y Furioso 2</h2>
+                            <p class="card_info">El expolicía Brian O'Conner y su amigo Roman Pearce vuelven al mundo de
+                                las
+                                carreras para transportar dinero sucio del criminal Carter Verone en Miami, mientras
+                                colaboran con la agente encubierta Mónica Clemente para derribar su imperio. </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Cuidado bebe suelto</h2>
-                        <p class="card_info">Unos granujas secuestran al hijo de una adinerada familia de Chicago pero
-                            el bebé se escapa y se embarca en una serie de aventuras por la ciudad.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Cuidado bebe suelto</h2>
+                            <p class="card_info">Unos granujas secuestran al hijo de una adinerada familia de Chicago
+                                pero
+                                el bebé se escapa y se embarca en una serie de aventuras por la ciudad.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
