--- a/series.html
+++ b/series.html
@@ -67,88 +67,98 @@
                 <h1 class="fw-bold my-3">Series de Ficcion</h1>
             </div>
         </div>
+        <div class="container">
+            <!-- primera fila -->
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/agente carter.webp" alt="">
+                        <div class="card_body  dark  d-flex flex-column">
+                            <h2 class="card_title">Agente Carter</h2>
+                            <p class="card_info">Peggy Carter parte en una misión en solitario para adquirir el
+                                misterioso
+                                Zodiac mientras se enfrenta al sexismo después de la Segunda Guerra Mundial en la SSR,
+                                un
+                                precursor de S.H.I.E.L.D.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/ahsoka.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Ahsoka</h2>
+                            <p class="card_info">Narra la historia de Ahsoka Tano, una antigua Jedi que investiga una
+                                amenaza emergente que se cierne sobre una galaxia vulnerable, ambientada después de la
+                                caída
+                                del Imperio y protagonizada por la actriz Rosario Dawson.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <!-- primera fila -->
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/agente carter.webp" alt="">
-                    <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">Agente Carter</h2>
-                        <p class="card_info">Peggy Carter parte en una misión en solitario para adquirir el misterioso
-                            Zodiac mientras se enfrenta al sexismo después de la Segunda Guerra Mundial en la SSR, un
-                            precursor de S.H.I.E.L.D.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/andor.webp" alt="">
+                        <div class=" card_body dark d-flex flex-column">
+                            <h2 class="card_title">Andor</h2>
+                            <p class="card_info"> La serie muestra la transformación de Andor, un ladrón que se
+                                convierte en
+                                revolucionario y finalmente se une a la Rebelión contra el Imperio Galáctico.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/bad-batch.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Bad Batch</h2>
+                            <p class="card_info">La serie sigue a la Fuerza Clon 99, un escuadrón único de soldados clon
+                                con
+                                mutaciones genéticas que resisten la Orden 66 y huyen en los primeros días del Imperio
+                                Galáctico. A ellos se une Omega, una joven clon femenino.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/ahsoka.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Ahsoka</h2>
-                        <p class="card_info">Narra la historia de Ahsoka Tano, una antigua Jedi que investiga una
-                            amenaza emergente que se cierne sobre una galaxia vulnerable, ambientada después de la caída
-                            del Imperio y protagonizada por la actriz Rosario Dawson.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/andor.webp" alt="">
-                    <div class=" card_body dark d-flex flex-column">
-                        <h2 class="card_title">Andor</h2>
-                        <p class="card_info"> La serie muestra la transformación de Andor, un ladrón que se convierte en
-                            revolucionario y finalmente se une a la Rebelión contra el Imperio Galáctico.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/avengers-unidos.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Avengers Unidos</h2>
+                            <p class="card_info">Es una historia de superhéroes, conocidos como los Vengadores, se unen
+                                para
+                                dar frente a una amenaza global que
+                                ningún héroe puede manejar solo. Esta alianza épica lucha contra villanos
+                                intergalácticos y
+                                fuerzas del mal para salvar al mundo, mostrando trabajo en equipo, valentía y
+                                sacrificio.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/bad-batch.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Bad Batch</h2>
-                        <p class="card_info">La serie sigue a la Fuerza Clon 99, un escuadrón único de soldados clon con
-                            mutaciones genéticas que resisten la Orden 66 y huyen en los primeros días del Imperio
-                            Galáctico. A ellos se une Omega, una joven clon femenino.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/avengers-unidos.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Avengers Unidos</h2>
-                        <p class="card_info">Es una historia de superhéroes, conocidos como los Vengadores, se unen para
-                            dar frente a una amenaza global que
-                            ningún héroe puede manejar solo. Esta alianza épica lucha contra villanos intergalácticos y
-                            fuerzas del mal para salvar al mundo, mostrando trabajo en equipo, valentía y sacrificio.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/blood-free.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Blood Free</h2>
-                        <p class="card_info">Después de sumergirse en una madriguera de pistas enredadas, un ex
-                            guardaespaldas se ve reclutado para proteger al director ejecutivo de una controvertida
-                            empresa de carne cultivada en laboratorio, quien también es un sobreviviente del fatídico
-                            ataque que cambió su vida.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/blood-free.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Blood Free</h2>
+                            <p class="card_info">Después de sumergirse en una madriguera de pistas enredadas, un ex
+                                guardaespaldas se ve reclutado para proteger al director ejecutivo de una controvertida
+                                empresa de carne cultivada en laboratorio, quien también es un sobreviviente del
+                                fatídico
+                                ataque que cambió su vida.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
