--- a/series2.html
+++ b/series2.html
@@ -67,90 +67,102 @@
                 <h1 class="fw-bold my-3">Series de Ficcion</h1>
             </div>
         </div>
+        <div class="container">
+            <!-- primera fila -->
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/simulador-de-vehiculos.webp" alt="">
+                        <div class="card_body  dark  d-flex flex-column">
+                            <h2 class="card_title">Simulador de Vehiculos</h2>
+                            <p class="card_info">
+                                Conozca de cerca algunos de los barcos y vehículos más emblemáticos y queridos de las
+                                películas de Star Wars mientras esta encantadora serie lo lleva a recorridos aéreos por
+                                la
+                                Galaxia Lejana, Muy Lejana.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/lost.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Lost</h2>
+                            <p class="card_info">Historia de un variopinto grupo de supervivientes de un accidente de
+                                aviación en una isla del Pacífico aparentemente desierta, una isla en la que suceden
+                                cosas
+                                muy extrañas. Luchando por la supervivencia, casi medio centenar de personas mostrarán
+                                lo
+                                mejor y lo peor de sí mismas.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <!-- primera fila -->
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/simulador-de-vehiculos.webp" alt="">
-                    <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">Simulador de Vehiculos</h2>
-                        <p class="card_info">
-                            Conozca de cerca algunos de los barcos y vehículos más emblemáticos y queridos de las
-                            películas de Star Wars mientras esta encantadora serie lo lleva a recorridos aéreos por la
-                            Galaxia Lejana, Muy Lejana.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/connect.webp" alt="">
+                        <div class=" card_body dark d-flex flex-column">
+                            <h2 class="card_title">Connect</h2>
+                            <p class="card_info">Ha Dongsoo, un nuevo tipo de humano inmortal conocido como "Connect",
+                                es
+                                secuestrado por una banda de recolectores de órganos que están decididos a quitarle los
+                                ojos.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/the-x-files.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">The x Files</h2>
+                            <p class="card_info">El agente Mulder y su escéptica compañera Scully deben encargarse de un
+                                atentado en un edificio federal en Dallas; Mulder sospecha que la bomba ha sido colocada
+                                por
+                                el mismo gobierno estadounidense.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/lost.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Lost</h2>
-                        <p class="card_info">Historia de un variopinto grupo de supervivientes de un accidente de
-                            aviación en una isla del Pacífico aparentemente desierta, una isla en la que suceden cosas
-                            muy extrañas. Luchando por la supervivencia, casi medio centenar de personas mostrarán lo
-                            mejor y lo peor de sí mismas.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/connect.webp" alt="">
-                    <div class=" card_body dark d-flex flex-column">
-                        <h2 class="card_title">Connect</h2>
-                        <p class="card_info">Ha Dongsoo, un nuevo tipo de humano inmortal conocido como "Connect", es
-                            secuestrado por una banda de recolectores de órganos que están decididos a quitarle los
-                            ojos.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/generacion-2009.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Generacion 2009</h2>
+                            <p class="card_info">Los agentes del FBI que se graduaron en Quantico en 2009 se
+                                reencuentran
+                                tras la muerte de un amigo en común y se enfrentan a los inmensos cambios que está
+                                experimentando el sistema de justicia estadounidense gracias a la inteligencia
+                                artificial.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/the-x-files.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">The x Files</h2>
-                        <p class="card_info">El agente Mulder y su escéptica compañera Scully deben encargarse de un
-                            atentado en un edificio federal en Dallas; Mulder sospecha que la bomba ha sido colocada por
-                            el mismo gobierno estadounidense.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/generacion-2009.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Generacion 2009</h2>
-                        <p class="card_info">Los agentes del FBI que se graduaron en Quantico en 2009 se reencuentran
-                            tras la muerte de un amigo en común y se enfrentan a los inmensos cambios que está
-                            experimentando el sistema de justicia estadounidense gracias a la inteligencia artificial.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/series-ficcion/terra-nova.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Terra Nova</h2>
-                        <p class="card_info">La familia Shannon se une a la colonia Terra Nova, un nuevo mundo lleno de
-                            oportunidades pero también de peligros. Jim, su esposa Elisabeth, y sus hijos Josh, Maddy y
-                            Zoe, deben adaptarse a esta tierra misteriosa. Un secreto sobre Zoe pone en riesgo su lugar
-                            en la colonia, mientras el líder Nathaniel Taylor les advierte que no todo es tan idílico
-                            como parece.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/series-ficcion/terra-nova.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Terra Nova</h2>
+                            <p class="card_info">La familia Shannon se une a la colonia Terra Nova, un nuevo mundo lleno
+                                de
+                                oportunidades pero también de peligros. Jim, su esposa Elisabeth, y sus hijos Josh,
+                                Maddy y
+                                Zoe, deben adaptarse a esta tierra misteriosa. Un secreto sobre Zoe pone en riesgo su
+                                lugar
+                                en la colonia, mientras el líder Nathaniel Taylor les advierte que no todo es tan
+                                idílico
+                                como parece.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
