--- a/peliculas.html
+++ b/peliculas.html
@@ -67,101 +67,110 @@
                 <h1 class="fw-bold my-3">Peliculas de Accion</h1>
             </div>
         </div>
-
-        <!-- primera fila -->
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-principales/deadpool-2.webp" alt="">
-                    <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">DeadPool 2</h2>
-                        <p class="card_info">Tras sobrevivir a un ataque bovino casi mortal, un distinguido chef de
-                            cafeteria (Wade Wilson)
-                            lucha por su sueño de convertirse en el camarero más sensual de Miami, al tiempo que aprende
-                            a
-                            lidiar con la pérdida de su sentido del gusto. Buscando recuperar eso que vuelve emocionante
-                            su
-                            vida, además de un condensador de flujo, Wade debe luchar contra ninjas, la yakuza y una
-                            manada
-                            caninos sexualmente agresivos, mientras viaja por el mundo para descubrir la importancia de
-                            la
-                            familia, la amistad y el sabor - encontrado de un nuevo gusto por la aventura y ganando el
-                            codiciado
-                            título de taza de café de "Mejor amante del mundo"</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+        <div class="container">
+            <!-- primera fila -->
+            <div class="row ">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start ">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-principales/deadpool-2.webp" alt="">
+                        <div class="card_body  dark  d-flex flex-column">
+                            <h2 class="card_title">DeadPool 2</h2>
+                            <p class="card_info">Tras sobrevivir a un ataque bovino casi mortal, un distinguido chef de
+                                cafeteria (Wade Wilson)
+                                lucha por su sueño de convertirse en el camarero más sensual de Miami, al tiempo que
+                                aprende
+                                a
+                                lidiar con la pérdida de su sentido del gusto. Buscando recuperar eso que vuelve
+                                emocionante
+                                su
+                                vida, además de un condensador de flujo, Wade debe luchar contra ninjas, la yakuza y una
+                                manada
+                                caninos sexualmente agresivos, mientras viaja por el mundo para descubrir la importancia
+                                de
+                                la
+                                familia, la amistad y el sabor - encontrado de un nuevo gusto por la aventura y ganando
+                                el
+                                codiciado
+                                título de taza de café de "Mejor amante del mundo"</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/ant-man-wasp.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Ant-man and Wasp</h2>
+                            <p class="card_info">Scott Lang vuelve a enfundarse el traje de Ant-Man para pelear codo con
+                                codo junto a la Avispa. La misión revelará a los dos superhéroes un secreto terrible y
+                                los
+                                enfrentará a su enemigo más poderoso.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/ant-man-wasp.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Ant-man and Wasp</h2>
-                        <p class="card_info">Scott Lang vuelve a enfundarse el traje de Ant-Man para pelear codo con
-                            codo junto a la Avispa. La misión revelará a los dos superhéroes un secreto terrible y los
-                            enfrentará a su enemigo más poderoso.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/avatar.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Avatar</h2>
+                            <p class="card_info">Jake Sully, un exinfante de marina, usa un Avatar para moverse por
+                                Pandora,
+                                un planeta donde los Na'vi viven y el ambiente es peligroso para los humanos. Durante su
+                                misión, se enamora de una mujer Na'vi.
+                            </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/capitan-america.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Capitan America</h2>
+                            <p class="card_info">Steve Rogers quiere ser soldado, pero siempre es rechazado. Finalmente,
+                                participa en un experimento que lo convierte en el Capitán América y recibe su primera
+                                misión.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center align-items-center ">
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/dia-de-la-independencia.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Dia de la Independencia</h2>
+                            <p class="card_info">Una flota de naves espaciales ataca la Tierra el 4 de julio,
+                                destruyendo
+                                grandes ciudades. Un grupo de supervivientes planea un contraataque para salvar el
+                                planeta
+                                antes de que sea demasiado tarde. </p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 d-flex justify-content-center text-start">
+                    <div class="card">
+                        <img src="img/peliculas-series/pelis-accion/rapido-furioso.webp" alt="">
+                        <div class="card_body dark d-flex flex-column">
+                            <h2 class="card_title">Rapido y Furioso</h2>
+                            <p class="card_info">Dom Toretto y sus familias se enfrentan al peor enemigo imaginable, uno
+                                llegado desde el pasado con sed de venganza, dispuesto a cualquier cosa con tal de
+                                destruir
+                                todo aquello que Dom ama.</p>
+                            <a class="card_btn btn" href="error404.html">Ver Ahora</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/avatar.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Avatar</h2>
-                        <p class="card_info">Jake Sully, un exinfante de marina, usa un Avatar para moverse por Pandora,
-                            un planeta donde los Na'vi viven y el ambiente es peligroso para los humanos. Durante su
-                            misión, se enamora de una mujer Na'vi.
-                        </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/capitan-america.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Capitan America</h2>
-                        <p class="card_info">Steve Rogers quiere ser soldado, pero siempre es rechazado. Finalmente,
-                            participa en un experimento que lo convierte en el Capitán América y recibe su primera
-                            misión.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row justify-content-center ">
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/dia-de-la-independencia.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Dia de la Independencia</h2>
-                        <p class="card_info">Una flota de naves espaciales ataca la Tierra el 4 de julio, destruyendo
-                            grandes ciudades. Un grupo de supervivientes planea un contraataque para salvar el planeta
-                            antes de que sea demasiado tarde. </p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/rapido-furioso.webp" alt="">
-                    <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Rapido y Furioso</h2>
-                        <p class="card_info">Dom Toretto y sus familias se enfrentan al peor enemigo imaginable, uno
-                            llegado desde el pasado con sed de venganza, dispuesto a cualquier cosa con tal de destruir
-                            todo aquello que Dom ama.</p>
-                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
 
     </div>
