acomode el texto de las peliculas y series

--- a/detallePelicula.html
+++ b/detallePelicula.html
@@ -86,7 +86,7 @@
                 </ul>  
             </div>
 
-            <div class="detalle-pelicula container text-light">
+            <div class="detalle-pelicula container text-light text-start">
                 <h2>Deadpool 2</h2>
                 <h4 class="fw-light">Tras sobrevivir a un ataque bovino casi mortal, un distinguido chef de cafeteria (Wade Wilson) 
                     lucha por su sueño de convertirse en el camarero más sensual de Miami, al tiempo que aprende a 
