--- a/detalleSerie-episodios-2.html
+++ b/detalleSerie-episodios-2.html
@@ -90,7 +90,7 @@
             </div>
 
             <!-- Menu desplegable -->
-            <div class="container">
+            <div class="container text-start">
                 <div class="btn-group">
                     <button class="btn btn-secondary dropdown-toggle mb-3" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
                       Temporada 2
@@ -104,7 +104,7 @@
             
 
              <!-- Episodios -->
-            <section class="container d-flex  justify-content-center align-items-center" >
+            <section class="container d-flex  justify-content-center align-items-center text-start" >
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
