--- a/detalleSerie.html
+++ b/detalleSerie.html
@@ -88,7 +88,7 @@
                 </ul>  
             </div>
 
-            <div class="detalle-pelicula container text-light">
+            <div class="detalle-pelicula container text-light text-start">
                 <h2>Loki</h2>
                 <h4 class="fw-light">
                 En "loki", de Marver Studios, el volátil villano Loki (Tom Hiddleston)
