agregue las imagenes

--- a/detalleSerie-episodios-2.html
+++ b/detalleSerie-episodios-2.html
@@ -70,7 +70,8 @@
                     <p class="">SERIE <b>HD</b> · 2021-2023 · 2 temporadas · Ciencia ficcion,Fantasía </p>
                     <p class="carousel_desc">El volátil villano Loki (Tom Hiddleston) retoma su papel como el Dios de las Mentiras.</p>
                     <div class="botones d-flex ">
-                        <button class="carousel_boton btn btn-light btn-lg m-1">VER AHORA</button>
+                         <!--  <button class="carousel_boton btn btn-light btn-lg m-1">VER AHORA</button> -->
+                         <a class="carousel_boton btn btn-light btn-lg m-1" href="/error404.html">VER AHORA</a>
                     </div>
                 </div>
             </div>
